Crear/Actualizar Categorias/animacion/index.html

--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story: Olvidados en el Tiempo -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story: De terror -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie44.html">
+    <img src="https://image.tmdb.org/t/p/original/gKPCTXj1xllfTHWQ8op7sKCGpvW.jpg" alt="Toy Story: De terror" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Toy Story: De terror</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- Toy Story: Olvidados en el Tiempo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie43.html">
     <img src="https://image.tmdb.org/t/p/original/3m8SkdSzWOkNodITnuqXCGaIdFG.jpg" alt="Toy Story: Olvidados en el Tiempo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
