--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story: Olvidados en el Tiempo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story: De terror -->
+<li>
+  <a href="../Peliculas/movie44.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gKPCTXj1xllfTHWQ8op7sKCGpvW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Toy Story: De terror 2013</span>
+    <span class="hidden">Especial de TV para Halloween tipo mediometraje, producido por los estudios Pixar, basado en los personajes de la exitosa trilogía de Toy Story.</span>
+  </a>
+</li>
+<!--FIN--><!-- Toy Story: Olvidados en el Tiempo -->
 <li>
   <a href="../Peliculas/movie43.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
