--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story: De terror -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mulan II -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie45.html">
+    <img src="https://image.tmdb.org/t/p/original/lQbZiWh4ZDSd2co0FMz8U3LGvL7.jpg" alt="Mulan II" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mulan II</div>
+  <div class="text-xs text-white/70">2004</div>
+</article><!-- Toy Story: De terror -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie44.html">
     <img src="https://image.tmdb.org/t/p/original/gKPCTXj1xllfTHWQ8op7sKCGpvW.jpg" alt="Toy Story: De terror" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
