Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story: De terror -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mulan II -->
+<li>
+  <a href="../Peliculas/movie45.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/lQbZiWh4ZDSd2co0FMz8U3LGvL7.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mulan II 2004</span>
+    <span class="hidden">La leyenda de Mulan continúa en esta nueva aventura. La bella y valiente heroína Mulan, siempre acompañada por su dragón guardián, Mushu y sus nuevos amigos, recibe la noticia más emocionante de su vida cuando el General Shang pide su mano en matrimonio, pero las sorpresas acaban de comenzar... El travieso Mushu intentará separar a la feliz pareja durante el tiempo que sea posible para mantener así su trabajo como dragón guardián. Además Mulan y Shang tendrán que escoltar por toda China a tres princesas que se dirigen a celebrar sus respectivos matrimonios, previamente concertados. Cuando Mulan descubre que ninguna de ellas desea estos matrimonios tomará una decisión que cambiará el curso de la historia.</span>
+  </a>
+</li>
+<!--FIN--><!-- Toy Story: De terror -->
 <li>
   <a href="../Peliculas/movie44.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
