--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mulan II -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cleopatra: el misterio final -->
+<li>
+  <a href="../Peliculas/movie46.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iXNdiLowyxNem3hHmIh4M9A16Q8.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cleopatra: el misterio final 2025</span>
+    <span class="hidden">Después de 20 años buscando la tumba de Cleopatra, la búsqueda de la arqueóloga K. Martínez se traslada a un sitio submarino en el Mediterráneo. Está acompañada por el descubridor del Titanic, Bob Ballard, la Armada Egipcia y equipos de buceo para explorar la ubicación.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mulan II -->
 <li>
   <a href="../Peliculas/movie45.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
