--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cleopatra: el misterio final -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Austin Powers: El Agente Internacional del Misterio -->
+<li>
+  <a href="../Peliculas/movie47.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/99XaTLygymVuzqZAlWOaWfld67u.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Austin Powers: El Agente Internacional del Misterio 1997</span>
+    <span class="hidden">Primera aventura de Austin Powers (Mike Myers), un peculiar y atractivo espía de los años sesenta, cuyo principal enemigo es el doctor Maligno (interpretado también por Myers). Tras ser ambos sometidos a un proceso de congelación, se despiertan treinta años después en una sociedad completamente distinta a la que conocían. Sin embargo, ellos siguen siendo los mismos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Cleopatra: el misterio final -->
 <li>
   <a href="../Peliculas/movie46.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
