Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Austin Powers: El Agente Internacional del Misterio -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Austin Powers 2: El Espia Seductor -->
+<li>
+  <a href="../Peliculas/movie48.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xncRyVPUP5cJWoVKiyqTtKZzwAg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Austin Powers 2: El Espía Seductor 1999</span>
+    <span class="hidden">Tras ser congelado, Austin Powers, un agente secreto de los años 60, vuelve a la vida en los años 90. Se encuentra con una nueva sociedad en la que tendrá que enfrentarse con nuevos villanos, pero también con el Doctor Maligno, su máximo enemigo. El malvado doctor tiene un siniestro plan: ha inventado una máquina del tiempo que le permitirá volver a los años 60 y destruir a su archienemigo. Pero Powers contará con la ayuda de una bella agente para derrotarlo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Austin Powers: El Agente Internacional del Misterio -->
 <li>
   <a href="../Peliculas/movie47.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
