Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Austin Powers 2: El Espia Seductor -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Austin Powers 3: El Miembro de Oro -->
+<li>
+  <a href="../Peliculas/movie49.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/72bSmfG2V95oQfM7C2gmtQeMwrq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Austin Powers 3: El Miembro de Oro 2002</span>
+    <span class="hidden">El agente Austin Powers se enfrenta de nuevo al doctor Maligno y a su cómplice, Mini-Yo; que tras escapar de una cárcel de máxima seguridad obliga a Austin Powers a ponerse de nuevo en acción. Miembro de Oro es un misterioso personaje que ayuda al doctor Maligno a idear el plan para dominar el mundo. El malvado viajará en el tiempo y secuestrará al padre del protagonista.... Otro gran éxito de taquilla de las aventuras del singular espía funky protagonizado por el famoso cómico Mike Myers.</span>
+  </a>
+</li>
+<!--FIN--><!-- Austin Powers 2: El Espia Seductor -->
 <li>
   <a href="../Peliculas/movie48.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
