--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Austin Powers 3: El Miembro de Oro -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- No es otra tonta pelicula americana -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie50.html">
+    <img src="https://image.tmdb.org/t/p/original/hSnvrM0rY4sBA2s8XygP76YBDJJ.jpg" alt="No es otra tonta película americana" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">No es otra tonta película americana</div>
+  <div class="text-xs text-white/70">2001</div>
+</article><!-- Austin Powers 3: El Miembro de Oro -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie49.html">
     <img src="https://image.tmdb.org/t/p/original/72bSmfG2V95oQfM7C2gmtQeMwrq.jpg" alt="Austin Powers 3: El Miembro de Oro" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
