Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Austin Powers 3: El Miembro de Oro -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- No es otra tonta pelicula americana -->
+<li>
+  <a href="../Peliculas/movie50.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hSnvrM0rY4sBA2s8XygP76YBDJJ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">No es otra tonta película americana 2001</span>
+    <span class="hidden">En el instituto John Hughes los chicos son como cualquier adolescente en cualquier otra peli de adolescentes. El chico deportista y popular apuesta con Austin, el rubito guapo, a que es capaz de transformar a Janey, la fea del colegio, en la reina del baile de fin de curso. Pero dos maquiavélicas compañeras intentarán que Jake pierda la apuesta: su hermana Catherine y Priscilla, la jefa de las animadoras. El resto de la pandilla tampoco es muy distinta a la de cualquier otra película de adolescentes americana. Y claro; los alumnos del instituto viven un curso lleno de fiestas, diversión, alcohol y sexo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Austin Powers 3: El Miembro de Oro -->
 <li>
   <a href="../Peliculas/movie49.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
