Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- No es otra tonta pelicula americana -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Embrion -->
+<li>
+  <a href="../Peliculas/movie51.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/dxbI3kT9mvlc6Yh14xCKFbd0RvE.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Embrión 2020</span>
+    <span class="hidden">Kevin y su novia Evelyn son una pareja de campistas que son secuestrados por extraterrestres que embarazan a esta última. A medida que la entidad dentro de ella comienza a crecer, Evelyn descubre que sus antojos solo pueden ser satisfechos por la carne y la sangre humanas.</span>
+  </a>
+</li>
+<!--FIN--><!-- No es otra tonta pelicula americana -->
 <li>
   <a href="../Peliculas/movie50.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
