Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¿Quien Engano a Roger Rabbit? -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mas alla del cielo -->
+<li>
+  <a href="../Peliculas/movie53.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/g4TAQ4mYvObkOvX5cBAZrDT3NmJ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Más allá del cielo 2010</span>
+    <span class="hidden">A Charlie St. Cloudle le afectó tanto la muerte de Sam, su hermano menor, que aceptó un trabajo en el cementerio donde el pequeño está enterrado. Charlie tiene un vínculo especial con su hermano: cada noche se encuentra con él para hablar y jugar juntos. Pero, cuando una chica entra en la vida de Charlie, entonces tendrá que elegir entre mantener una promesa que le hizo a Sam o irse con la joven que ama.</span>
+  </a>
+</li>
+<!--FIN--><!-- ¿Quien Engano a Roger Rabbit? -->
 <li>
   <a href="../Peliculas/movie52.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
