--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mas alla del cielo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Sweetpea -->
+<li>
+  <a href="../Series/serie112.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mWTC2oovCWN4hzTNB88OZHwC8BX.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Sweetpea 2024</span>
+    <span class="hidden">Rhiannon Lewis no causa mucha impresión – la gente se cruza con ella y no la mira dos veces hasta que es llevada al extremo y pierde el control. La vida de Rhiannon se transforma, pero ¿puede guardar su secreto mortal?</span>
+  </a>
+</li>
+<!--FIN--><!-- Mas alla del cielo -->
 <li>
   <a href="../Peliculas/movie53.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
