Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Barbie -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Barbie: La Princesa y la plebeya -->
+<li>
+  <a href="../Peliculas/movie55.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/2X6kRYytvhEwuS2ukHwVvIN7eVc.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Barbie: La Princesa y la plebeya 2004</span>
+    <span class="hidden">La mítica muñeca Barbie cobra vida en esta moderna versión del cuento de Mark Twain "El Príncipe y el Mendigo" sobre un error de identidad y el poder de la amistad. Con la voz de Gisela como Barbie cantando siete temas originales llega la primera película musical de Barbie interpretando además un doble papel.</span>
+  </a>
+</li>
+<!--FIN--><!-- Barbie -->
 <li>
   <a href="../Peliculas/movie54.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
