--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Barbie: La Princesa y la plebeya -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Barbie y las Zapatillas Magicas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie56.html">
+    <img src="https://image.tmdb.org/t/p/original/cL2SBmx7awgEjQgRXOaflqTVnbn.jpg" alt="Barbie y las Zapatillas Mágicas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Barbie y las Zapatillas Mágicas</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- Barbie: La Princesa y la plebeya -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie55.html">
     <img src="https://image.tmdb.org/t/p/original/2X6kRYytvhEwuS2ukHwVvIN7eVc.jpg" alt="Barbie: La Princesa y la plebeya" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
