Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Barbie: La Princesa y la plebeya -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Barbie y las Zapatillas Magicas -->
+<li>
+  <a href="../Peliculas/movie56.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/cL2SBmx7awgEjQgRXOaflqTVnbn.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Barbie y las Zapatillas Mágicas 2013</span>
+    <span class="hidden">La película comienza cuando se prueba un par de brillantes zapatos de color rosa, ella y su mejor amiga, Hailey, son llevados a un mundo fantástico ballet. Allí, Kristyn descubre que ella tiene que bailar en sus ballets favoritos para derrotar a un malvado Reina de las Nieves.</span>
+  </a>
+</li>
+<!--FIN--><!-- Barbie: La Princesa y la plebeya -->
 <li>
   <a href="../Peliculas/movie55.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
