--- a/Categorias/historia/index.html
+++ b/Categorias/historia/index.html
@@ -49,7 +49,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Cleopatra: el misterio final -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ip Man -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie57.html">
+    <img src="https://image.tmdb.org/t/p/original/6BNa7SL9qrs3iaoMtdXIYqF58s3.jpg" alt="Ip Man" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Ip Man</div>
+  <div class="text-xs text-white/70">2008</div>
+</article><!-- Cleopatra: el misterio final -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie46.html">
     <img src="https://image.tmdb.org/t/p/original/iXNdiLowyxNem3hHmIh4M9A16Q8.jpg" alt="Cleopatra: el misterio final" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
