--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Barbie y las Zapatillas Magicas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man -->
+<li>
+  <a href="../Peliculas/movie57.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6BNa7SL9qrs3iaoMtdXIYqF58s3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ip Man 2008</span>
+    <span class="hidden">Foshan, años treinta. Ip Man, respetado maestro de Wing Chun, combina el estudio de las artes marciales con los combates ocasionales a los que se ve forzado por parte de sus admiradores. Son tiempos de prosperidad a los que la guerra con Japón amenaza con poner fin. Con la ocupación estallará la tragedia e Ip Man se verá obligado a defender el honor de su pueblo. Ip Man (o también conocido como Yip Man), fue maestro y mentor de Bruce Lee.</span>
+  </a>
+</li>
+<!--FIN--><!-- Barbie y las Zapatillas Magicas -->
 <li>
   <a href="../Peliculas/movie56.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
