--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man 2 -->
+<li>
+  <a href="../Peliculas/movie58.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ype1J4olDfeQpseCiQob5I74oqg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ip Man 2 2010</span>
+    <span class="hidden">En esta secuela, Ip Man (Donnie Yen) ha dejado atrás Foshun y llega a Hong-Kong, donde abre una escuela de Wing Chun. Allí pronto entra en conflicto con un maestro local de Hung Fist llamado Hung Jan-nam (Sammo Hung). Las tensiones entre los dos maestros de Kung fu seguirán incrementándose hasta que se ven forzados a batirse a duelo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ip Man -->
 <li>
   <a href="../Peliculas/movie57.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
