--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man 3 -->
+<li>
+  <a href="../Peliculas/movie59.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1wBnEGU0OXtgtDvTtgvYEODwcwi.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ip Man 3 2015</span>
+    <span class="hidden">Una banda de criminales dirigidos por un constructor ambicioso intentan desalojar la escuela local pero el maestro Ip Man no está dispuesto a ceder. Paralelamente, un nuevo maestro de Wing Chun ha llegado a la ciudad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ip Man 2 -->
 <li>
   <a href="../Peliculas/movie58.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
