--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man 3 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man 4 -->
+<li>
+  <a href="../Peliculas/movie60.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/j1rbZPqBiZX3NLWU5q1TH13v6BL.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ip Man 4 2019</span>
+    <span class="hidden">El maestro de Wing chun viaja a los Estados Unidos, donde uno de sus estudiantes ha molestado a la comunidad de artes marciales al abrir una escuela de Wing Chun.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ip Man 3 -->
 <li>
   <a href="../Peliculas/movie59.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
