Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man 4 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Master Z: El legado de Ip Man -->
+<li>
+  <a href="../Peliculas/movie61.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5SvIKrP3q1i3A8C99YPRgjSrNed.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Master Z: El legado de Ip Man 2018</span>
+    <span class="hidden">Mientras mantiene un perfil bajo después de su derrota con Ip Man, Cheung Tin Chi se mete en problemas después de pelear con un extranjero poderoso.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ip Man 4 -->
 <li>
   <a href="../Peliculas/movie60.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
