Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Master Z: El legado de Ip Man -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man: Nace la leyenda -->
+<li>
+  <a href="../Peliculas/movie62.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/x4vucEsBBD3ZGCpn1VMcLT3eSfh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ip Man: Nace la leyenda 2010</span>
+    <span class="hidden">Especie de precuela del biopic del "maestro de Bruce Lee" (Ip Man). Narrará la vida del maestro del Wing Chun entre las los 11 a 28 años, así como el significado y la filosofía que conlleva este estilo de lucha.</span>
+  </a>
+</li>
+<!--FIN--><!-- Master Z: El legado de Ip Man -->
 <li>
   <a href="../Peliculas/movie61.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
