--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ip Man: Nace la leyenda -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- IP Man: El maestro del kung fu -->
+<li>
+  <a href="../Peliculas/movie63.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/usmTsXE83nyhLmft6YvuJ2XLJaa.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">IP Man: El maestro del kung fu 2019</span>
+    <span class="hidden">Durante su época como jefe de policía de Foshan, Ip Man se convierte en el objetivo de un vengativo gangster justo cuando las fuerzas japonesas invaden la región.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ip Man: Nace la leyenda -->
 <li>
   <a href="../Peliculas/movie62.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
