--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -64,7 +64,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/j1rbZPqBiZX3NLWU5q1TH13v6BL.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Ip Man 4 2019</span>
-    <span class="hidden">El maestro de Wing chun viaja a los Estados Unidos, donde uno de sus estudiantes ha molestado a la comunidad de artes marciales al abrir una escuela de Wing Chun.</span>
+    <span class="hidden">El final  maestro de Wing chun viaja a los Estados Unidos, donde uno de sus estudiantes ha molestado a la comunidad de artes marciales al abrir una escuela de Wing Chun.</span>
   </a>
 </li>
 <!--FIN--><!-- Ip Man 3 -->
@@ -82,7 +82,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/ype1J4olDfeQpseCiQob5I74oqg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Ip Man 2 2010</span>
-    <span class="hidden">En esta secuela, Ip Man (Donnie Yen) ha dejado atrás Foshun y llega a Hong-Kong, donde abre una escuela de Wing Chun. Allí pronto entra en conflicto con un maestro local de Hung Fist llamado Hung Jan-nam (Sammo Hung). Las tensiones entre los dos maestros de Kung fu seguirán incrementándose hasta que se ven forzados a batirse a duelo.</span>
+    <span class="hidden">la leyenda del gran maestro En esta secuela, Ip Man (Donnie Yen) ha dejado atrás Foshun y llega a Hong-Kong, donde abre una escuela de Wing Chun. Allí pronto entra en conflicto con un maestro local de Hung Fist llamado Hung Jan-nam (Sammo Hung). Las tensiones entre los dos maestros de Kung fu seguirán incrementándose hasta que se ven forzados a batirse a duelo.</span>
   </a>
 </li>
 <!--FIN--><!-- Ip Man -->
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/cL2SBmx7awgEjQgRXOaflqTVnbn.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Barbie y las Zapatillas Mágicas 2013</span>
-    <span class="hidden">La película comienza cuando se prueba un par de brillantes zapatos de color rosa, ella y su mejor amiga, Hailey, son llevados a un mundo fantástico ballet. Allí, Kristyn descubre que ella tiene que bailar en sus ballets favoritos para derrotar a un malvado Reina de las Nieves.</span>
+    <span class="hidden">en la bailarina magica La película comienza cuando se prueba un par de brillantes zapatos de color rosa, ella y su mejor amiga, Hailey, son llevados a un mundo fantástico ballet. Allí, Kristyn descubre que ella tiene que bailar en sus ballets favoritos para derrotar a un malvado Reina de las Nieves.</span>
   </a>
 </li>
 <!--FIN--><!-- Barbie: La Princesa y la plebeya -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/2X6kRYytvhEwuS2ukHwVvIN7eVc.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Barbie: La Princesa y la plebeya 2004</span>
-    <span class="hidden">La mítica muñeca Barbie cobra vida en esta moderna versión del cuento de Mark Twain "El Príncipe y el Mendigo" sobre un error de identidad y el poder de la amistad. Con la voz de Gisela como Barbie cantando siete temas originales llega la primera película musical de Barbie interpretando además un doble papel.</span>
+    <span class="hidden">en la princesa y la costurera La mítica muñeca Barbie cobra vida en esta moderna versión del cuento de Mark Twain "El Príncipe y el Mendigo" sobre un error de identidad y el poder de la amistad. Con la voz de Gisela como Barbie cantando siete temas originales llega la primera película musical de Barbie interpretando además un doble papel.</span>
   </a>
 </li>
 <!--FIN--><!-- Barbie -->
