--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- IP Man: El maestro del kung fu -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Nacido Para Correr -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie64.html">
+    <img src="https://image.tmdb.org/t/p/original/azO3RdG0Q5DnlQoMOyDJXoncErW.jpg" alt="Nacido Para Correr" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Nacido Para Correr</div>
+  <div class="text-xs text-white/70">2011</div>
+</article><!-- IP Man: El maestro del kung fu -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie63.html">
     <img src="https://image.tmdb.org/t/p/original/usmTsXE83nyhLmft6YvuJ2XLJaa.jpg" alt="IP Man: El maestro del kung fu" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
