Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- IP Man: El maestro del kung fu -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Nacido Para Correr -->
+<li>
+  <a href="../Peliculas/movie64.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/azO3RdG0Q5DnlQoMOyDJXoncErW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Nacido Para Correr 2011</span>
+    <span class="hidden">Born To race es la historia de Danny Krueger, un piloto rebelde callejero en un curso de colisión con problemas. Después de un accidente en una carrera callejera ilegal, es enviado a un pequeño pueblo a vivir con su padre, un corredor de NASCAR. Cuando Danny decide entrar en el NHRA High School Drags, se ve en la obligación de pedirle ayuda a su padre</span>
+  </a>
+</li>
+<!--FIN--><!-- IP Man: El maestro del kung fu -->
 <li>
   <a href="../Peliculas/movie63.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
