Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Nacido Para Correr -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Nacido para Correr: Velocidad Maxima -->
+<li>
+  <a href="../Peliculas/movie65.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sYYQ9kS6Twvt0UcjxGLmBcq5k11.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Nacido para Correr: Velocidad Máxima 2014</span>
+    <span class="hidden"></span>
+  </a>
+</li>
+<!--FIN--><!-- Nacido Para Correr -->
 <li>
   <a href="../Peliculas/movie64.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
