Crear/Actualizar Categorias/movie/index.html

--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Camino a Belen -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- TRON: Ares -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie70.html">
+    <img src="https://image.tmdb.org/t/p/original/uWYQK1wrhbqeH6A96XsWlX2BKI6.jpg" alt="TRON: Ares" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">TRON: Ares</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Camino a Belen -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie69.html">
     <img src="https://image.tmdb.org/t/p/original/w6TNNt60ftQ4lsh69awxy5Iiwvd.jpg" alt="Camino a Belén" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
