Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Camino a Belen -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- TRON: Ares -->
+<li>
+  <a href="../Peliculas/movie70.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/uWYQK1wrhbqeH6A96XsWlX2BKI6.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">TRON: Ares 2025</span>
+    <span class="hidden">Un programa altamente sofisticado llamado Ares es enviado del mundo digital al mundo real en una misión peligrosa, marcando el primer encuentro de la humanidad con seres de IA.</span>
+  </a>
+</li>
+<!--FIN--><!-- Camino a Belen -->
 <li>
   <a href="../Peliculas/movie69.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
