Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- TRON: Ares -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Chiquito Pero Peligroso -->
+<li>
+  <a href="../Peliculas/movie71.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/k1R2gKOAIwOGpNRNBbRszTEAKYU.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Chiquito Pero Peligroso 2006</span>
+    <span class="hidden">En esta divertida comedia, las grandes sorpresas llegan en paquete pequeño. Darryl Edwards (Shawn Wayans) tiene tantas ganas de ser padre que confunde a Calvin Sims (Marlon Wayans), un ladrón prófugo de la justicia, que es bajito y con cara de bebé, con un niño abandonado. Darryl y su mujer acogen al “bebé” en su casa mientras Percy P (Tracy Morgan), el socio del ladrón, intenta ayudarle a recuperar un diamante robado.  Él y su esposa recogen al bebé llevándolo a su hogar mientras que el socio del ladrón Percy P. (Tracy Morgan) trata de ayudarlo a recuperar un diamante robado...</span>
+  </a>
+</li>
+<!--FIN--><!-- TRON: Ares -->
 <li>
   <a href="../Peliculas/movie70.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
