Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- HIM: El elegido -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mantenimiento requerido -->
+<li>
+  <a href="../Peliculas/movie73.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wdhUHVEwpfsutJ7gJPqsOTOf2i2.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mantenimiento requerido 2025</span>
+    <span class="hidden">Charlie, dueña de un taller mecánico exclusivamente femenino, debe reevaluar su futuro cuando un ostentoso competidor se muda al frente. En busca de consuelo, recurre a un confidente anónimo en línea, sin imaginar que se está abriendo ante Beau, el mismísimo rival que amenaza su negocio. Mientras saltan las chispas tanto en el mundo virtual como en el real, la verdad amenaza con destruir todo.</span>
+  </a>
+</li>
+<!--FIN--><!-- HIM: El elegido -->
 <li>
   <a href="../Peliculas/movie72.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
