Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Big Mouth -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Teoria del Big Bang -->
+<li>
+  <a href="../Series/serie114.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/2bDQWCvFxRGhdvThTJvVxueEoLl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Teoría del Big Bang 2007</span>
+    <span class="hidden">Leonard y Sheldon son dos físicos que comparten trabajo y apartamento. La serie comienza con la mudanza de Penny, su nueva y atractiva vecina, y hace hincapié en la dificultad de los físicos para relacionarse con personas fuera de su entorno para dar lugar a situaciones cómicas.</span>
+  </a>
+</li>
+<!--FIN--><!-- Big Mouth -->
 <li>
   <a href="../Series/serie113.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
