Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Teoria del Big Bang -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Big Time Rush -->
+<li>
+  <a href="../Series/serie115.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/9N61wXR7FqsuByDVSEjM6qcPhKH.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Big Time Rush 2009</span>
+    <span class="hidden">Cuatro jugadores de hockey de Minnesota aspiran a convertirse en una banda de chicos. Kendall, Logan, Carlos y James se embarcan en un viaje que les cambia la vida y se enfrentan a desafíos en el camino.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Teoria del Big Bang -->
 <li>
   <a href="../Series/serie114.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
