--- a/index.html
+++ b/index.html
@@ -610,31 +610,55 @@ async function cargarSeries() {
   if (!contenedor) return;
 
   try {
-    const res = await fetch("https://api.github.com/repos/lzrdrz10/sv/contents/Series", {
-      headers: { Accept: "application/vnd.github.v3+json" }
-    });
+    // Archivo index.html en Categorias/serie (raw)
+    const url = "https://raw.githubusercontent.com/lzrdrz10/sv/main/Categorias/serie/index.html";
+    const res = await fetch(url);
+    if (!res.ok) throw new Error(`Error al cargar índice de series: ${res.status}`);
+    const htmlText = await res.text();
 
-    let archivos = await res.json();
-    // 🔹 Mostrar los primeros archivos sin orden aleatorio (igual que películas)
-    archivos = archivos
-      .filter(f => f.name.endsWith(".html"))
-      .slice(0, 6);
+    // Buscar el marcador y extraer la sección donde se pegan los artículos
+    const marker = '<!--PEGAR CONTENIDO AQUI ABAJO-->';
+    let sectionHtml = null;
+    const markerIndex = htmlText.indexOf(marker);
+    if (markerIndex !== -1) {
+      const afterMarker = htmlText.slice(markerIndex);
+      const sectionMatch = afterMarker.match(/<section[\s\S]*?<\/section>/i);
+      sectionHtml = sectionMatch ? sectionMatch[0] : afterMarker;
+    } else {
+      // Si no encuentra marcador, fallback a todo el HTML (pero esperamos que sí exista)
+      sectionHtml = htmlText;
+    }
 
-    for (let file of archivos) {
-      const htmlRes = await fetch(file.download_url);
-      const htmlText = await htmlRes.text();
+    // Extraer todos los <article> dentro de esa sección
+    const regexArticle = /<article[\s\S]*?<\/article>/gi;
+    const articles = sectionHtml.match(regexArticle) || [];
 
-      const tituloMatch = htmlText.match(/<title>(.*?)<\/title>/i);
-      const posterMatch = htmlText.match(/background-image\s*:\s*url\((['"]?)(.*?)\1\)/i);
-      const titulo = tituloMatch ? sanitizeHTML(tituloMatch[1]) : "Sin título";
-      const poster = posterMatch ? posterMatch[2] : "https://via.placeholder.com/300x450?text=Sin+Poster";
+    if (!articles.length) return;
+
+    // Tomar los últimos 6 (más recientes) y mostrar de más reciente a más antiguo
+    const seleccionados = articles.slice(-6).reverse();
+
+    for (let artHtml of seleccionados) {
+      // extraer link, poster, titulo y año
+      const linkMatch = artHtml.match(/<a\s+href=["'](.*?)["']/i);
+      const posterMatch = artHtml.match(/<img\s+[^>]*src=["'](.*?)["']/i);
+      const tituloMatchDiv = artHtml.match(/<div[^>]*class=["'][^"']*font-semibold[^"']*["'][^>]*>(.*?)<\/div>/i);
+      const yearMatch = artHtml.match(/<div[^>]*class=["'][^"']*text-xs[^"']*text-white\/70["'][^>]*>(.*?)<\/div>/i);
+
+      let link = linkMatch ? linkMatch[1] : "#";
+      // Normalizar path: "../../Series/serie115.html" -> "Series/serie115.html"
+      link = link.replace(/\.\.\/\.\//g, "");
+      const poster = posterMatch ? posterMatch[1] : "https://via.placeholder.com/200x300?text=Sin+Poster";
+      const titulo = tituloMatchDiv ? sanitizeHTML(tituloMatchDiv[1]) : "Sin título";
+      const year = yearMatch ? sanitizeHTML(yearMatch[1]) : "N/A";
 
       const item = document.createElement("a");
-      item.href = `Series/${file.name}`;
-      item.className = "flex-shrink-0 w-40 sm:w-48 block";
+      item.href = link;
+      item.className = "flex-shrink-0 w-28 sm:w-32 block";
       item.innerHTML = `
-        <img src="${poster}" alt="${titulo}" class="w-full h-24 sm:h-28 object-cover rounded-lg mb-2" loading="lazy">
-        <p class="text-xs sm:text-sm text-center">${titulo}</p>
+        <img src="${poster}" alt="${titulo}" class="w-full aspect-[2/3] object-cover rounded-lg mb-1 transition-transform duration-300 hover:scale-105" loading="lazy">
+        <p class="text-[11px] sm:text-xs text-center line-clamp-2 font-semibold">${titulo}</p>
+        <p class="text-[10px] text-white/70 text-center">${year}</p>
       `;
       contenedor.appendChild(item);
     }
@@ -683,6 +707,7 @@ async function cargarVerticales() {
     console.error("Error cargando carrusel vertical de anime:", err);
   }
 }
+
 
 async function cargarKdramas() {
   const contenedor = document.getElementById("kdramaCarousel");
@@ -780,8 +805,10 @@ document.addEventListener("DOMContentLoaded", async () => {
   }
 });
 </script>
+
 </body>
 </html>
+
 
 
 
